compiler/tests/safety/fail/x86-64/not_in_bounds.jazz
export fn f (reg ptr u64[2] t, reg u64 idx) -> reg ptr u64[2] {
  idx = 2;
  t[(int) idx] = 2;
  return t;
}
